--- a/avoscloud-gcm/build.gradle
+++ b/avoscloud-gcm/build.gradle
@@ -25,6 +25,14 @@ android.libraryVariants.all { variant ->
     artifacts.add('archives', task);
 }
 
+task androidReleaseJar(type: Jar) {
+    from "$buildDir/intermediates/classes/release/"
+    exclude '**/BuildConfig.class'
+    exclude '**/R.class'
+    exclude '**/R$*.class'
+}
+androidReleaseJar.dependsOn(assemble)
+
 dependencies {
     compile project(':avoscloud-push')
     compile 'com.google.android.gms:play-services-gcm:8.1.0'
