--- a/avoscloud-statistics/build.gradle
+++ b/avoscloud-statistics/build.gradle
@@ -34,6 +34,15 @@ android.libraryVariants.all { variant ->
     artifacts.add('archives', task);
 }
 
+task androidReleaseJar(type: Jar) {
+    from "$buildDir/intermediates/classes/release/"
+    exclude '**/BuildConfig.class'
+    exclude '**/R.class'
+    exclude '**/R$*.class'
+}
+androidReleaseJar.dependsOn(assemble)
+
+
 dependencies {
     compile project(':avoscloud-sdk')
 }
