--- a/avoscloud-sdk/build.gradle
+++ b/avoscloud-sdk/build.gradle
@@ -47,6 +47,14 @@ android.libraryVariants.all { variant ->
     artifacts.add('archives', task);
 }
 
+task androidReleaseJar(type: Jar) {
+    from "$buildDir/intermediates/classes/release/"
+    exclude '**/BuildConfig.class'
+    exclude '**/R.class'
+    exclude '**/R$*.class'
+}
+androidReleaseJar.dependsOn(assemble)
+
 dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'com.alibaba:fastjson:1.2.37'
