--- a/avoscloud-feedback/build.gradle
+++ b/avoscloud-feedback/build.gradle
@@ -21,14 +21,9 @@ android.libraryVariants.all { variant ->
     def task = project.tasks.create "jar${name.capitalize()}", Jar
     task.dependsOn variant.javaCompile
     task.from variant.javaCompile.destinationDir
+    task.exclude 'com/avos/avoscloud/R.class'
     artifacts.add('archives', task);
 }
-
-task androidReleaseJar(type: Jar) {
-    from "$buildDir/intermediates/classes/release/"
-    exclude 'com/avos/avoscloud/R.class'
-}
-androidReleaseJar.dependsOn(assemble)
 
 dependencies {
     compile 'com.android.support:appcompat-v7:25.+'
