--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include ':avoscloud-search'
 include ':avoscloud-sns'
 include ':avoscloud-statistics'
 include ':avoscloud-gcm'
+include ':hmsagent'
 include ':avoscloud-mixpush'
