--- a/hmsagent/build.gradle
+++ b/hmsagent/build.gradle
@@ -2,8 +2,9 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '25.0.0'
-        defaultConfig {
+    buildToolsVersion "26.0.2"
+
+    defaultConfig {
             minSdkVersion 16
             targetSdkVersion 26
             versionCode 1
@@ -24,12 +25,12 @@ dependencies {
 
     // 此处版本号仅为示例，请手动修改成实际集成的HMSSDK版本号
     String HMSSDKVer ='2.6.1.301'
-    compile 'com.huawei.android.hms:iap:'+HMSSDKVer
-    compile 'com.huawei.android.hms:game:'+HMSSDKVer
-    compile 'com.huawei.android.hms:sns:'+HMSSDKVer
-    compile 'com.huawei.android.hms:hwid:'+HMSSDKVer
-    compile 'com.huawei.android.hms:push:'+HMSSDKVer
-    compile 'com.huawei.android.hms:opendevice:'+HMSSDKVer
+//    compile 'com.huawei.android.hms:iap:'+HMSSDKVer
+//    compile 'com.huawei.android.hms:game:'+HMSSDKVer
+//    compile 'com.huawei.android.hms:sns:'+HMSSDKVer
+//    compile 'com.huawei.android.hms:hwid:'+HMSSDKVer
+//    compile 'com.huawei.android.hms:push:'+HMSSDKVer
+//    compile 'com.huawei.android.hms:opendevice:'+HMSSDKVer
 
 }
 
