--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,6 @@ include ':avoscloud-search'
 include ':avoscloud-sns'
 include ':avoscloud-statistics'
 include ':avoscloud-gcm'
+include ':avoscloud-fcm'
 include ':hmsagent'
 include ':avoscloud-mixpush'
