--- a/maven_push.gradle
+++ b/maven_push.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'maven'
+apply plugin: 'signing'
 
 def isReleaseBuild() {
     return VERSION_NAME.contains("SNAPSHOT") == false
@@ -6,12 +7,12 @@ def isReleaseBuild() {
 
 def getReleaseRepositoryUrl() {
     return hasProperty('RELEASE_REPOSITORY_URL') ? RELEASE_REPOSITORY_URL
-            : "http://mvn.leancloud.cn/nexus/content/repositories/releases/"
+            : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 }
 
 def getSnapshotRepositoryUrl() {
     return hasProperty('SNAPSHOT_REPOSITORY_URL') ? SNAPSHOT_REPOSITORY_URL
-            : "http://mvn.leancloud.cn/nexus/content/repositories/snapshots/"
+            : "https://oss.sonatype.org/content/repositories/snapshots"
 }
 
 def getRepositoryUsername() {
@@ -52,6 +53,7 @@ afterEvaluate { project ->
     uploadArchives {
         repositories {
             mavenDeployer {
+                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
                 pom.groupId = GROUP
                 pom.artifactId = POM_ARTIFACT_ID
                 pom.version = VERSION_NAME
@@ -69,6 +71,21 @@ afterEvaluate { project ->
                     description POM_DESCRIPTION
                     url POM_URL
 
+                    licenses {
+                        license {
+                            name = 'The Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id = 'leancloud'
+                            name = 'LeanCloud Engineer'
+                            email = 'eng@leancloud.rocks'
+                        }
+                    }
+
                     scm {
                         url POM_SCM_URL
                         connection POM_SCM_CONNECTION
@@ -77,5 +94,24 @@ afterEvaluate { project ->
                 }
             }
         }
+    }
+
+    signing {
+        required {isReleaseBuild() && gradle.taskGraph.hasTask("uploadArchives")}
+        sign configurations.archives
+    }
+
+    task androidSourcesJar(type: Jar) {
+        classifier = 'sources'
+        from android.sourceSets.main.java.sourceFiles
+    }
+
+    task javadocJar(type: Jar) {
+        classifier = 'javadoc'
+    }
+
+    artifacts {
+        archives androidSourcesJar
+        archives javadocJar
     }
 }
