fix AVRole/AVRelation query bug, upgrade mipush sdk to 3.6.9, fix avquery condition sharding bug

--- a/avoscloud-feedback/build.gradle
+++ b/avoscloud-feedback/build.gradle
@@ -26,8 +26,8 @@ android.libraryVariants.all { variant ->
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.+'
-    compile 'com.android.support:support-v4:25.+'
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile 'com.android.support:support-v4:26.0.2'
     compile project(':avoscloud-sdk')
 }
 
