--- a/avoscloud-push/build.gradle
+++ b/avoscloud-push/build.gradle
@@ -46,9 +46,10 @@ android.libraryVariants.all { variant ->
 
 dependencies {
     compile project(':avoscloud-sdk')
-    compile 'cn.leancloud.android:Java-WebSocket:1.3.2-leancloud'
+//    compile 'cn.leancloud.android:Java-WebSocket:1.3.2-leancloud'
+    compile 'org.java-websocket:Java-WebSocket:1.3.8'
     compile 'com.google.protobuf:protobuf-java:3.4.0'
-    compile 'com.android.support:support-v4:18.+'
+    compile 'com.android.support:support-v4:26.0.2'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.1.4"
